Resolve invisibility and transparency bugs

--- a/src/components/_examples/bubble-chart/_bubble-chart.scss
+++ b/src/components/_examples/bubble-chart/_bubble-chart.scss
@@ -52,21 +52,21 @@ $vzb-bc-year-size:300px;
     }
     
     .vzb-bc-labels .vzb-bc-entity rect{  
-        @include transition(opacity 300ms linear);
+        @include transition(opacity 200ms linear);
         cursor: pointer;
         opacity: 0.8;
         fill: white; 
         stroke: $vzb-color-primary; 
     }
     .vzb-bc-labels .vzb-bc-entity text.vzb-bc-label-x {  
-        @include transition(opacity 300ms linear);
+        @include transition(opacity 200ms linear);
         fill: white; 
         text-anchor: middle; 
         dominant-baseline: middle;
         pointer-events: none;
     }
     .vzb-bc-labels .vzb-bc-entity circle.vzb-bc-label-x { 
-        @include transition(opacity 300ms linear);
+        @include transition(opacity 200ms linear);
         cursor: pointer;
         fill: #ff89cd;
         stroke: white;
